--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
+    "git-filter-repo": "^0.0.30",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
